--- a/SlotMachineGameApp/Info.plist
+++ b/SlotMachineGameApp/Info.plist
@@ -9,5 +9,7 @@
 		<key>UILaunchScreen</key>
 		<dict/>
 	</dict>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
 </dict>
 </plist>
